--- a/final/books.html
+++ b/final/books.html
@@ -10,6 +10,7 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <script src="js/main.js" defer></script>
+    <script src="js/books.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
 </head>
@@ -40,8 +41,9 @@
             </nav>
         </header>
 
-        <main id="home">
-
+        <main id="book">
+            <section id="cardview">
+            </section>
         </main>
 
         <footer>
