--- a/final/order.html
+++ b/final/order.html
@@ -45,10 +45,10 @@
                 <form action="thanks.html" method="GET">
                     <h2 class="formtitle">Books</h2>
                     <div id="books">
-                        <label class="mycheck"><input type="checkbox" name="book" value="nonprofit">Non-Profit</label>
-                        <label class="mycheck"><input type="checkbox" name="book" value="bronze">Bronze</label>
-                        <label class="mycheck"><input type="checkbox" name="book" value="silver">Silver</label>
-                        <label class="mycheck"><input type="checkbox" name="book" value="gold">Gold</label>
+                        <label class="check"><input type="checkbox" name="book" value="Letters from the Guard">Letters from the Guard</label>
+                        <label class="check"><input type="checkbox" name="book" value="Tower of Cards">Tower of Cards</label>
+                        <label class="check"><input type="checkbox" name="book" value="Flooded Vision">Flooded Vision</label>
+                        <label class="check"><input type="checkbox" name="book" value="The Brother's Power">The Brother's Power</label>
                     </div>
                      
                     <div id="back">
