--- a/final/athour.html
+++ b/final/athour.html
@@ -41,7 +41,14 @@
         </header>
 
         <main id="home">
-
+            <div id="about">
+                <h2>About Ammon</h2>
+                <picture class="village">
+                    <source class="heroimg" srcset="images/ammon_medium.webp" media="(min-width: 560px) and (max-width: 1499px)">
+                    <source class="heroimg" srcset="images/ammon_large.webp" media="(min-width: 1500px)">
+                    <img class="heroimg" src="images/ammon_small.webp" alt="Viking style building">
+                </picture>
+            </div>
         </main>
 
         <footer>
