--- a/final/athour.html
+++ b/final/athour.html
@@ -17,7 +17,10 @@
     <div class="content">
         <header>
             <a class="hl" id="logo_link" href="index.html" >
-                <img class="logo" src="images/logo_medium.webp" alt="Ammon Durtschi Logo" >
+                <picture class="logo">
+                    <source class="heroimg" srcset="images/logo_large.webp" media="(min-width: 560px) and (min-width: 1500px)">
+                    <img class="heroimg" src="images/logo_medium.webp" alt="Ammon Durtschi Logo">
+                </picture>
             </a>
             <h1>Ammon Durtschi</h1>
             <div class="social">
