--- a/final/books.html
+++ b/final/books.html
@@ -18,7 +18,10 @@
     <div class="content">
         <header>
             <a class="hl" id="logo_link" href="index.html" >
-                <img class="logo" src="images/logo_medium.webp" alt="Ammon Durtschi Logo" >
+                <picture class="logo">
+                    <source class="heroimg" srcset="images/logo_large.webp" media="(min-width: 560px)">
+                    <img class="heroimg" src="images/logo_medium.webp" alt="Ammon Durtschi Logo">
+                </picture>
             </a>
             <h1>Ammon Durtschi</h1>
             <div class="social">
@@ -48,7 +51,10 @@
 
         <footer>
             <div class="f1">
-                <div class="foot_img"><img class="flogo" src="images/logo_small.webp" alt="Ammon Durtschi Logo" ></div>
+                <picture class="logo">
+                    <source class="heroimg" srcset="images/logo_medium.webp" media="(min-width: 560px)">
+                    <img class="heroimg" src="images/logo_small.webp" alt="Ammon Durtschi Logo">
+                </picture>
             
                 <div class="contact">
                     <h3>Contact</h3>
