--- a/final/athour.html
+++ b/final/athour.html
@@ -18,7 +18,7 @@
         <header>
             <a class="hl" id="logo_link" href="index.html" >
                 <picture class="logo">
-                    <source class="heroimg" srcset="images/logo_large.webp" media="(min-width: 560px) and (min-width: 1500px)">
+                    <source class="heroimg" srcset="images/logo_large.webp" media="(min-width: 560px)">
                     <img class="heroimg" src="images/logo_medium.webp" alt="Ammon Durtschi Logo">
                 </picture>
             </a>
@@ -56,7 +56,12 @@
 
         <footer>
             <div class="f1">
-                <div class="foot_img"><img class="flogo" src="images/logo_small.webp" alt="Ammon Durtschi Logo" ></div>
+                <div class="foot_img">
+                    <picture class="logo">
+                        <source class="heroimg" srcset="images/logo_medium.webp" media="(min-width: 560px)">
+                        <img class="heroimg" src="images/logo_small.webp" alt="Ammon Durtschi Logo">
+                    </picture>
+                </div>
             
                 <div class="contact">
                     <h3>Contact</h3>
