--- a/final/future.html
+++ b/final/future.html
@@ -10,6 +10,7 @@
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <script src="js/main.js" defer></script>
+    <script src="js/future.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
 </head>
@@ -43,7 +44,7 @@
             </nav>
         </header>
 
-        <main id="home">
+        <main id="futurebooks">
 
         </main>
 
