--- a/final/athour.html
+++ b/final/athour.html
@@ -51,7 +51,9 @@
                     <source class="heroimg" srcset="images/ammon_large.webp" media="(min-width: 1500px)">
                     <img class="heroimg" src="images/ammon_small.webp" alt="Viking style building">
                 </picture>
-                <p></p>
+                <p>Ammon is form Morrison Colorado. He is the oldest of six siblings. Graduated form Brigham Young University of 
+                    Idaho in 2016. Enjoys fantasy, science fiction, horror, westerns, and alternative history books. He has plans 
+                    for many books both in and out of the Astimar and has been influenced by two many things to name.</p>
             </div>
         </main>
 
