--- a/final/index.html
+++ b/final/index.html
@@ -58,7 +58,7 @@
                 <h2 class="title">Weather</h2>
                 <img class="w" src="images/partly_cloudy.png" alt="Partly Cloudy">
                 <div class="temp"><span id="tem"></span>°F</div>
-                <h3 class="wf"></h3>
+                <!-- <h3 class="wf"></h3> -->
                 <p class="ws1">Wind Speed: <span class="ws2" id = "windspeed"></span>mph</p>
                 <p class="wc1">Wind Chill: <span class="wc2" id = "windchill"></span></p>
             </div>
